--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    width: 100%;
+    /* height: 100%; */
+}
+body{
+    width: 100%;
+    /* height: 100%; */
+}
